# AgentValleyEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline_eval.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/server/: README.md  index.js  package.json
app/src/: App.tsx  index.css
artifacts/grpo/: metrics.jsonl  policy.pt
artifacts/multi_agent_grpo/: metrics.jsonl
artifacts/neural_policy/: metrics.jsonl  policy.pt
artifacts/q_learning/: metrics.jsonl  q_table.json
assets/: training_summary.json
datasets/: easy.json  hard.json  medium.json
docs/: writeup.md
env/: __init__.py  action_space.py  agents.py  anti_cheat.py  environment.py  graders.py  ma_prompt.py  multi_agent_env.py  multi_agent_environment.py  openenv_compat.py  rewards.py  schemas.py  tasks.py
notebooks/: agent_valley_training.ipynb  multi_agent_training_per_episode.ipynb
scripts/: generate_training_plots.py
server/: __init__.py  app.py
tests/: test_action_space.py  test_backend_training_api.py  test_dataset_schema.py  test_environment.py  test_frontend_backend_metrics.py  test_grpo_training.py  test_multi_agent.py  test_neural_policy.py  test_openenv_schema.py  test_q_learning.py  test_reward_hacking.py  test_rewards.py  test_submission_polish.py
training/: __init__.py  common.py  feature_encoder.py  grpo_train.py  grpo_train_stub.py  ma_grpo_train.py  manager.py  neural_policy.py  policy_runtime.py  q_learning.py  train_neural_policy.py
(+15 files in other folders)
