[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AgentValleyEnv"
version = "1.0.0"
description = "OpenEnv benchmark for multi-agent valley survival and cooperation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=2.7.2,<3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "openenv-core>=0.2.0",
    "torch>=2.0",
    "httpx>=0.27"
]

[project.scripts]
agentvalley-server = "server.app:main"
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server", "training"]
